recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:12: error: reassignment to val
        angle = angle/(shrink)
              ^